2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-sections.txt:
	* tests/gobject/src/gobject.c:
	* tests/gobject/src/gobject.h:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Add some index lists to the tests. Add a deprecated function.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	patch by: Felix Riemann <friemann@svn.gnome.org>

	* gtk-doc.xsl:
	* style.css:
	  Produce valid html. Fixes #534627.

2008-05-23  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* tests/gobject/Makefile.am:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-sections.txt:
	* tests/gobject/docs-tmpl/tester.types:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Build same docs once again with old tmpl approach.

2008-05-23  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Sync names.

2008-05-08  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Fix a long standing bug that killed spaces in tmpl files.

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix regexps changes from previous commit. When using /e the
	  replacement part has to be a perl snippet.

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Don't expand '#' in ulink tags. Also allow to escape "#%@" with '\'.
	  Add to testsuite. Fixes #530758

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mktmpl.in:
	  It is GObject not GtkObject anymore

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Make note about expanding urls.

	* help/manual/C/gtk-doc-manual.xml: