@@ -1,5 +1,10 @@
 2008-06-02  Stefan Kost  <ensonic@users.sf.net>
 
+	* style.css:
+	  Improve spacing on indicies and glossaries.
+
+2008-06-02  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	* tests/bugs/docs/tester-docs.xml:
 	* tests/gobject/docs/tester-docs.xml:
